force-app/main/default/objects/SPEN_IVRMessage__c/SPEN_IVRMessage__c.object-meta.xml
<CustomObject>
    <description>Holds all the message templates encompassing IVR, SMS, etc.</description>
    <label>Message Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Message Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>