force-app/main/default/objects/SPEN_IVRMessage__c/fields/SPEN_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ExternalId__c</fullName>
    <description>External Id field for any reference data</description>
    <externalId>true</externalId>
    <inlineHelpText>This value must not be changed if IVR uses this message template.</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>