force-app/main/default/objects/SPEN_IVRMessage__c/fields/SPEN_IVRMessage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IVRMessage__c</fullName>
    <description>This should be renamed to Message Template, as SMS, IVR, etc., all use this to store centrally managed messages.</description>
    <inlineHelpText>Message Template. Do not replace keywords enclosed with &lt;&lt; and &gt;&gt; for SMS templates as those are used by the application.</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>