force-app/main/default/objects/SPEN_IVRMessage__c/fields/SPEN_Message__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Message__c</fullName>
    <description>It hold the message on IVR Message object</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>