force-app/main/default/objects/SPEN_IVRMessage__c/fields/SPEN_Purpose__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Storm</fullName>
            </value>
            <value>
                <fullName>LV</fullName>
            </value>
            <value>
                <fullName>HV</fullName>
            </value>
            <value>
                <fullName>Flickering</fullName>
            </value>
            <value>
                <fullName>XRT</fullName>
            </value>
            <value>
                <fullName>XRT - Some On</fullName>
            </value>
            <value>
                <fullName>ETR Unknown</fullName>
            </value>
            <value>
                <fullName>HV Shutdown for Safety</fullName>
            </value>
            <value>
                <fullName>Dropped Supply</fullName>
            </value>
            <value>
                <fullName>Dropped Supply Within a Fault</fullName>
            </value>
            <value>
                <fullName>Multiple Fuse Replacements</fullName>
            </value>
            <value>
                <fullName>Extended Awaiting Emergency Services to provide access</fullName>
            </value>
            <value>
                <fullName>Some on Some off</fullName>
            </value>
            <value>
                <fullName>Cancelled Pre Arranged</fullName>
            </value>
            <value>
                <fullName>Extended Pre-Arranged</fullName>
            </value>
            <value>
                <fullName>Generators</fullName>
            </value>
            <value>
                <fullName>Unconfirmed reports of Fire, Vandalism, 3rd Party damage</fullName>
            </value>
            <value>
                <fullName>Comfort</fullName>
            </value>
            <value>
                <fullName>3-Hour Comfort Call</fullName>
            </value>
            <value>
                <fullName>3rd Call Received</fullName>
            </value>
            <value>
                <fullName>Dropped Supply with Notice</fullName>
            </value>
            <value>
                <fullName>Dropped Supply without Notice</fullName>
            </value>
            <value>
                <fullName>Estimated Restoration Time Extended</fullName>
            </value>
            <value>
                <fullName>Incident Created</fullName>
            </value>
            <value>
                <fullName>Incident Restored</fullName>
            </value>
            <value>
                <fullName>Resource Arrival On Site</fullName>
            </value>
            <value>
                <fullName>Resource Dispatched</fullName>
            </value>
            <value>
                <fullName>Restore Confirmation</fullName>
            </value>
            <value>
                <fullName>MPAS Inquiry</fullName>
            </value>
            <value>
                <fullName>MPAS Out-Of-Area Inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>