force-app/main/default/objects/SPEN_IVRMessage__c/fields/SPEN_TemplateIdentifier__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TemplateIdentifier__c</fullName>
    <description>Use to identify which template needs to be selected for messaging task communication</description>
    <label>Template Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>