force-app/main/default/objects/SPEN_IVRMessage__c/recordTypes/Blanket.recordType-meta.xml
<RecordType>
    <fullName>Blanket</fullName>
    <active>true</active>
    <label>Blanket</label>
</RecordType>