force-app/main/default/objects/SPEN_IVRMessage__c/recordTypes/Incident_AOS.recordType-meta.xml
<RecordType>
    <fullName>Incident_AOS</fullName>
    <active>true</active>
    <label>Incident AOS</label>
</RecordType>