force-app/main/default/objects/SPEN_IVRMessage__c/recordTypes/Incident_Dispatch.recordType-meta.xml
<RecordType>
    <fullName>Incident_Dispatch</fullName>
    <active>true</active>
    <label>Incident Dispatch</label>
</RecordType>