force-app/main/default/objects/SPEN_IVRMessage__c/recordTypes/Incident_Initial.recordType-meta.xml
<RecordType>
    <fullName>Incident_Initial</fullName>
    <active>true</active>
    <label>Incident Initial</label>
</RecordType>