force-app/main/default/objects/SPEN_IVRMessage__c/recordTypes/SMS.recordType-meta.xml
<RecordType>
    <fullName>SMS</fullName>
    <active>true</active>
    <label>SMS</label>
</RecordType>