force-app/main/default/objects/SPEN_IVRMessage__c/recordTypes/SPEN_VoiceAlert.recordType-meta.xml
<RecordType>
    <fullName>SPEN_VoiceAlert</fullName>
    <active>true</active>
    <label>Voice Alert</label>
</RecordType>