force-app/main/default/objects/SPEN_IVRMessage__c/recordTypes/Zone.recordType-meta.xml
<RecordType>
    <fullName>Zone</fullName>
    <active>true</active>
    <label>Zone</label>
</RecordType>