force-app/main/default/objects/SPEN_IVRMessage__c/validationRules/SmsRequiredFieldExternalId.validationRule-meta.xml
<ValidationRule>
    <fullName>SmsRequiredFieldExternalId</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;SMS&quot; &amp;&amp;
ISBLANK(SPEN_ExternalId__c)</errorConditionFormula>
    <errorDisplayField>SPEN_ExternalId__c</errorDisplayField>
    <errorMessage>The External ID field is required.</errorMessage>
</ValidationRule>