force-app/main/default/objects/SPEN_IVRMessage__c/validationRules/SmsRequiredFieldMessage.validationRule-meta.xml
<ValidationRule>
    <fullName>SmsRequiredFieldMessage</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;SMS&quot; &amp;&amp;
ISBLANK(SPEN_IVRMessage__c)</errorConditionFormula>
    <errorDisplayField>SPEN_IVRMessage__c</errorDisplayField>
    <errorMessage>The Message field is required.</errorMessage>
</ValidationRule>