force-app/main/default/objects/SPEN_IVRMessage__c/validationRules/SmsRequiredFieldPurpose.validationRule-meta.xml
<ValidationRule>
    <fullName>SmsRequiredFieldPurpose</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;SMS&quot; &amp;&amp;
ISPICKVAL(SPEN_Purpose__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>SPEN_Purpose__c</errorDisplayField>
    <errorMessage>The Purpose field is required.</errorMessage>
</ValidationRule>