force-app/main/default/objects/SPEN_IVRMessage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_ExternalId__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>SPEN_Message__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>SPEN_Purpose__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SPEN_IVRMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>