force-app/main/default/objects/SPEN_IVRMessage__c/listViews/SPEN_AllSmsMessageTemplates.listView-meta.xml
<ListView>
    <fullName>SPEN_AllSmsMessageTemplates</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Purpose__c</columns>
    <columns>SPEN_IVRMessage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All SMS Message Templates</label>
</ListView>